--- a/index.html
+++ b/index.html
@@ -161,6 +161,13 @@
 							>Payments</a
 						>
 						<a
+							href="./products.html"
+							class="nav-item nav-link"
+							id="products"
+							style="display: none"
+							>Our Products</a
+						>
+						<a
 							href="./contact.html"
 							class="nav-item nav-link"
 							>Contact Us</a
@@ -198,13 +205,6 @@
 									style="display: none"
 									>Careers</a
 								>
-								<a
-									href="./products.html"
-									class="dropdown-item"
-									id="products"
-									style="display: none"
-									>Our Products</a
-								>
 								<!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
 							</div>
 						</div>
@@ -237,9 +237,14 @@
 									>Leads</a
 								>
 								<a
+									href="./paymentLeads.html"
+									class="dropdown-item"
+									>Payments Leads</a
+								>
+								<a
 									href="./careerLeads.html"
 									class="dropdown-item"
-									>Career Leads</a
+									>Career Applicants</a
 								>
 								<a
 									href="./add-gallery.html"
@@ -297,11 +302,6 @@
 									>Manage Clients</a
 								>
 								<a
-									href="./paymentLeads.html"
-									class="dropdown-item"
-									>Manage Payments</a
-								>
-								<a
 									href="./uploadFounder.html"
 									class="dropdown-item"
 									>Manage Founders</a
@@ -337,9 +337,13 @@
 							<div
 								class="p-3"
 								style="max-width: 900px">
-								<h1
+								<h3
 									class="display-1 text-white mb-md-4 animated zoomIn"
-									id="homePageWelcome"></h1>
+									id="webAppName1"></h3>
+								<h4
+									class="display-1 text-white mb-md-4 animated zoomIn"
+									id="homePageWelcome"
+									style="font-size: 60px"></h4>
 								<a
 									href="contact.html"
 									class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
@@ -363,6 +367,9 @@
 							<div
 								class="p-3"
 								style="max-width: 900px">
+								<h1
+									class="display-1 text-white mb-md-4 animated zoomIn"
+									id="webAppName2"></h1>
 								<h5
 									class="text-white text-uppercase mb-3 animated slideInDown"
 									id="homePageCaption"></h5>
@@ -624,80 +631,117 @@
 		<!-- Service End -->
 
 		<!-- Features Start -->
-		<!-- <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-		<div class="container py-5">
-			<div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px">
-				<h5 class="fw-bold text-primary text-uppercase">Why Choose Us</h5>
-				<h1 class="mb-0">We Are Here to Grow Your Business Exponentially</h1>
-			</div>
-			<div class="row g-5">
-				<div class="col-lg-4">
-					<div class="row g-5">
-						<div class="col-12 wow zoomIn" data-wow-delay="0.2s">
-							<div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3"
-								style="width: 60px; height: 60px">
-								<i class="fa fa-cubes text-white"></i>
+		<div
+			class="container-fluid py-5 wow fadeInUp"
+			data-wow-delay="0.1s">
+			<div class="container py-5">
+				<div
+					class="section-title text-center position-relative pb-3 mb-5 mx-auto"
+					style="max-width: 600px">
+					<h5 class="fw-bold text-primary text-uppercase">Why Choose Us</h5>
+					<h1 class="mb-0">
+						Elevate Your Expectations, Choose Us for Unparalleled Gifting
+						Excellence
+					</h1>
+				</div>
+				<div class="row g-5">
+					<div class="col-lg-4">
+						<div class="row g-5">
+							<div
+								class="col-12 wow zoomIn"
+								data-wow-delay="0.2s">
+								<div
+									class="bg-primary rounded d-flex align-items-center justify-content-center mb-3"
+									style="width: 60px; height: 60px">
+									<i
+										class="fa fa-recycle"
+										style="color: white"></i>
+								</div>
+								<h4>Sustainable Gifting Solutions</h4>
+								<p class="mb-0 text-justify">
+									Elevate your gifting experience with our commitment to
+									eco-friendly and recycled products across all categories.
+									Transform your employees and customers into passionate brand
+									advocates while making a powerful impact on boosting employee
+									engagement and solidifying your brand presence.
+								</p>
 							</div>
-							<h4>Best In Industry</h4>
-							<p class="mb-0">
-								Our commitment to excellence and innovation sets us apart as
-								the premier choice for IT solutions, ensuring that we deliver
-								the highest standards in the industry
-							</p>
-						</div>
-						<div class="col-12 wow zoomIn" data-wow-delay="0.6s">
-							<div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3"
-								style="width: 60px; height: 60px">
-								<i class="fa fa-award text-white"></i>
+							<div
+								class="col-12 wow zoomIn"
+								data-wow-delay="0.6s">
+								<div
+									class="bg-primary rounded d-flex align-items-center justify-content-center mb-3"
+									style="width: 60px; height: 60px">
+									<i class="fa fa-award text-white"></i>
+								</div>
+								<h4>Our Consulting Expertise</h4>
+								<p class="mb-0 text-justify">
+									Our approach involves providing thorough consulting services,
+									offering buyers a transparent view into their procurement
+									endeavors. We meticulously authenticate commodity quality,
+									assess its value proposition, and deliver a comprehensive
+									service to management.
+								</p>
 							</div>
-							<h4>Cutting-edge Technological Solutions</h4>
-							<p class="mb-0">
-								We pride ourselves on our continuous integration of the latest
-								technological advancements, ensuring that our clients benefit
-								from state-of-the-art IT solutions that propel their
-								businesses forward with unmatched efficiency and performance
-							</p>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-4 wow zoomIn" data-wow-delay="0.9s" style="min-height: 350px">
-					<div class="position-relative h-100">
-						<img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.1s"
-							src="img/feature.jpg" style="object-fit: cover" />
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="row g-5">
-						<div class="col-12 wow zoomIn" data-wow-delay="0.4s">
-							<div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3"
-								style="width: 60px; height: 60px">
-								<i class="fa fa-users-cog text-white"></i>
-							</div>
-							<h4>Professional Staff</h4>
-							<p class="mb-0">
-								Our team comprises highly skilled and dedicated professionals
-								who bring a wealth of expertise and a passion for delivering
-								top-notch IT services tailored to your specific needs
-							</p>
+					<div
+						class="col-lg-4 wow zoomIn"
+						data-wow-delay="0.9s"
+						style="min-height: 350px">
+						<div class="position-relative h-100">
+							<img
+								class="position-absolute w-100 h-100 rounded wow zoomIn"
+								data-wow-delay="0.1s"
+								src="img/Why US Image.jpeg"
+								style="object-fit: cover" />
 						</div>
-						<div class="col-12 wow zoomIn" data-wow-delay="0.8s">
-							<div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3"
-								style="width: 60px; height: 60px">
-								<i class="fa fa-phone-alt text-white"></i>
+					</div>
+					<div class="col-lg-4">
+						<div class="row g-5">
+							<!-- Updated Point 1 -->
+							<div
+								class="col-12 wow zoomIn"
+								data-wow-delay="0.4s">
+								<div
+									class="bg-success rounded d-flex align-items-center justify-content-center mb-3"
+									style="width: 60px; height: 60px">
+									<i class="fa fa-leaf text-white"></i>
+									<!-- Updated Icon -->
+								</div>
+								<h4>Sustainable Practices</h4>
+								<!-- Updated Heading -->
+								<p class="mb-0 text-justify">
+									We specialize in making the entire gifting process
+									nature-friendly, catering to both corporate needs and our
+									commitment to Mother Earth. By choosing us, you not only
+									realize your vision of memorable gifting but also contribute
+									to a sustainable and eco-conscious approach to business.
+								</p>
 							</div>
-							<h4>24/7 Support</h4>
-							<p class="mb-0">
-								With our round-the-clock support system, you can rest assured
-								that any technical issues or concerns will be swiftly and
-								efficiently addressed, ensuring seamless operations at any
-								time of the day or night.
-							</p>
+							<!-- Updated Point 2 -->
+							<div
+								class="col-12 wow zoomIn"
+								data-wow-delay="1.2s">
+								<div
+									class="bg-primary rounded d-flex align-items-center justify-content-center mb-3"
+									style="width: 60px; height: 60px">
+									<i class="fa fa-trophy text-white"></i>
+								</div>
+								<h4>Rich 17-Year Legacy</h4>
+								<p class="mb-0 text-justify">
+									With a legacy spanning 17 years, we bring a wealth of
+									experience and expertise to the table. Our long-standing
+									commitment to excellence and innovation sets us apart,
+									ensuring that your gifting experience is backed by a proven
+									track record of success.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div> -->
 		<!-- Features Start -->
 
 		<!-- Quote Start -->
@@ -805,6 +849,21 @@
 											id="servicesDropdown">
 											<option selected>Select A Service</option>
 										</select>
+									</div>
+									<div class="col-12">
+										<label
+											for="referenceImageInput"
+											class="form-label text-white"
+											>Select Reference Image (If any)</label
+										>
+										<div class="input-group mb-3">
+											<input
+												type="file"
+												class="form-control"
+												id="referenceImageInput"
+												accept="image/*"
+												placeholder="Select Reference Image (If any)" />
+										</div>
 									</div>
 									<div class="col-12">
 										<textarea
@@ -1117,6 +1176,9 @@
 		<script src="lib/waypoints/waypoints.min.js"></script>
 		<script src="lib/counterup/counterup.min.js"></script>
 		<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+		<script
+			type="text/javascript"
+			src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
 		<!-- Template Javascript -->
 		<script
