--- a/leads.html
+++ b/leads.html
@@ -221,6 +221,13 @@
 					<a href="./clients.html" class="nav-item nav-link" id="clients" style="display: none">Clients</a>
 					<a href="./founders.html" class="nav-item nav-link" id="founders" style="display: none">Founders</a>
 					<a href="./payments.html" class="nav-item nav-link" id="payments" style="display: none">Payments</a>
+					<a
+							href="./products.html"
+							class="nav-item nav-link"
+							id="products"
+							style="display: none"
+							>Our Products</a
+						>
 					<a href="./contact.html" class="nav-item nav-link">Contact Us</a>
 					<div class="nav-item dropdown">
 						<a href="#" class="nav-link dropdown-toggle" id="more" data-bs-toggle="dropdown"
@@ -233,8 +240,7 @@
 								style="display: none">Reviews</a>
 							<a href="./careers.html" class="dropdown-item" id="careers"
 								style="display: none">Careers</a>
-							<a href="./products.html" class="dropdown-item" id="products" style="display: none">Our
-								Products</a>
+					
 							<!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
 						</div>
 					</div>
@@ -246,7 +252,8 @@
 							<a href="./content-edit.html" class="dropdown-item">Change Website Content <br />Services
 								and Products</a>
 							<a href="./leads.html" class="dropdown-item active">Leads</a>
-							<a href="./careerLeads.html" class="dropdown-item">Career Leads</a>
+							<a href="./paymentLeads.html" class="dropdown-item">Payments Leads</a>
+							<a href="./careerLeads.html" class="dropdown-item">Career Applicants</a>
 							<a href="./add-gallery.html" class="dropdown-item">Add Gallery</a>
 							<a href="./list-gallery.html" class="dropdown-item">List Gallery</a>
 							<a href="./uploadContact.html" class="dropdown-item">
@@ -260,7 +267,6 @@
 							<a href="./uploadReview.html" class="dropdown-item">Manage Reviews</a>
 							<a href="./uploadCareers.html" class="dropdown-item">Manage Careers</a>
 							<a href="uploadClient.html" class="dropdown-item">Manage Clients</a>
-							<a href="./paymentLeads.html" class="dropdown-item">Manage Payments</a>
 							<a href="./uploadFounder.html" class="dropdown-item">Manage Founders</a>
 							<button id="logout" style="color: red" class="nav-link custom-brand" data-bs-toggle="modal"
 								data-bs-target="#logoutConfirmationModal">
