--- a/reviews.html
+++ b/reviews.html
@@ -149,6 +149,13 @@
 							>Payments</a
 						>
 						<a
+							href="./products.html"
+							class="nav-item nav-link"
+							id="products"
+							style="display: none"
+							>Our Products</a
+						>
+						<a
 							href="./contact.html"
 							class="nav-item nav-link"
 							>Contact Us</a
@@ -186,13 +193,7 @@
 									style="display: none"
 									>Careers</a
 								>
-								<a
-									href="./products.html"
-									class="dropdown-item"
-									id="products"
-									style="display: none"
-									>Our Products</a
-								>
+
 								<!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
 							</div>
 						</div>
@@ -224,9 +225,14 @@
 									>Leads</a
 								>
 								<a
+									href="./paymentLeads.html"
+									class="dropdown-item"
+									>Payments Leads</a
+								>
+								<a
 									href="./careerLeads.html"
 									class="dropdown-item"
-									>Career Leads</a
+									>Career Applicants</a
 								>
 								<a
 									href="./add-gallery.html"
@@ -282,11 +288,6 @@
 									href="uploadClient.html"
 									class="dropdown-item"
 									>Manage Clients</a
-								>
-								<a
-									href="./paymentLeads.html"
-									class="dropdown-item"
-									>Manage Payments</a
 								>
 								<a
 									href="./uploadFounder.html"
