--- a/careerLeads.html
+++ b/careerLeads.html
@@ -312,6 +312,13 @@
 							>Payments</a
 						>
 						<a
+							href="./products.html"
+							class="nav-item nav-link"
+							id="products"
+							style="display: none"
+							>Our Products</a
+						>
+						<a
 							href="./contact.html"
 							class="nav-item nav-link"
 							>Contact Us</a
@@ -349,13 +356,6 @@
 									style="display: none"
 									>Careers</a
 								>
-								<a
-									href="./products.html"
-									class="dropdown-item"
-									id="products"
-									style="display: none"
-									>Our Products</a
-								>
 								<!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
 							</div>
 						</div>
@@ -387,9 +387,14 @@
 									>Leads</a
 								>
 								<a
+									href="./paymentLeads.html"
+									class="dropdown-item"
+									>Payments Leads</a
+								>
+								<a
 									href="./careerLeads.html"
-									class="dropdown-item active"
-									>Career Leads</a
+									class="dropdown-item"
+									>Career Applicants</a
 								>
 								<a
 									href="./add-gallery.html"
@@ -445,11 +450,6 @@
 									href="uploadClient.html"
 									class="dropdown-item"
 									>Manage Clients</a
-								>
-								<a
-									href="./paymentLeads.html"
-									class="dropdown-item"
-									>Manage Payments</a
 								>
 								<a
 									href="./uploadFounder.html"
@@ -586,6 +586,16 @@
 				>&nbsp;&nbsp;
 				<button
 					class="btn btn-primary"
+					id="newLeadsButton">
+					New Leads</button
+				>&nbsp;&nbsp;
+				<button
+					class="btn btn-primary"
+					id="processingLeadsButton">
+					Processing Leads</button
+				>&nbsp;&nbsp;
+				<button
+					class="btn btn-primary"
 					id="AcceptedLeadsButton">
 					Accepted Leads</button
 				>&nbsp;&nbsp;
@@ -593,6 +603,11 @@
 					class="btn btn-primary"
 					id="rejectedLeadsButton">
 					Rejected Leads</button
+				>&nbsp;&nbsp;
+				<button
+					class="btn btn-primary"
+					id="hiredLeadsButton">
+					Hired Leads</button
 				>&nbsp;&nbsp;
 			</div>
 			<br />
@@ -639,6 +654,7 @@
 								<th scope="col">Experience</th>
 								<th scope="col">Mobile Number</th>
 								<th scope="col">Email</th>
+								<th scope="col">Previous Designation</th>
 								<th scope="col">Designation</th>
 								<th scope="col">Status</th>
 							</tr>
