--- a/clients.html
+++ b/clients.html
@@ -149,6 +149,13 @@
 							>Payments</a
 						>
 						<a
+							href="./products.html"
+							class="nav-item nav-link"
+							id="products"
+							style="display: none"
+							>Our Products</a
+						>
+						<a
 							href="./contact.html"
 							class="nav-item nav-link"
 							>Contact Us</a
@@ -186,13 +193,6 @@
 									style="display: none"
 									>Careers</a
 								>
-								<a
-									href="./products.html"
-									class="dropdown-item"
-									id="products"
-									style="display: none"
-									>Our Products</a
-								>
 								<!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
 							</div>
 						</div>
@@ -224,9 +224,14 @@
 									>Leads</a
 								>
 								<a
+									href="./paymentLeads.html"
+									class="dropdown-item"
+									>Payments Leads</a
+								>
+								<a
 									href="./careerLeads.html"
 									class="dropdown-item"
-									>Career Leads</a
+									>Career Applicants</a
 								>
 								<a
 									href="./add-gallery.html"
@@ -282,11 +287,6 @@
 									href="uploadClient.html"
 									class="dropdown-item"
 									>Manage Clients</a
-								>
-								<a
-									href="./paymentLeads.html"
-									class="dropdown-item"
-									>Manage Payments</a
 								>
 								<a
 									href="./uploadFounder.html"
@@ -417,7 +417,10 @@
 			style="display: none">
 			<div class="container py-5 mb-5">
 				<div class="bg-white">
-					<div class="owl-carousel vendor-carousel2" id="vendor-carousel" style="width: 100%; max-width: 1200px; margin: 0 auto;">
+					<div
+						class="owl-carousel vendor-carousel2"
+						id="vendor-carousel"
+						style="width: 100%; max-width: 1200px; margin: 0 auto">
 						<!-- Vendor logos and names will be dynamically added here -->
 					</div>
 				</div>
