--- a/upload-logo.html
+++ b/upload-logo.html
@@ -234,6 +234,13 @@
 							>Payments</a
 						>
 						<a
+							href="./products.html"
+							class="nav-item nav-link"
+							id="products"
+							style="display: none"
+							>Our Products</a
+						>
+						<a
 							href="./contact.html"
 							class="nav-item nav-link"
 							>Contact Us</a
@@ -271,13 +278,6 @@
 									style="display: none"
 									>Careers</a
 								>
-								<a
-									href="./products.html"
-									class="dropdown-item"
-									id="products"
-									style="display: none"
-									>Our Products</a
-								>
 								<!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
 							</div>
 						</div>
@@ -309,9 +309,14 @@
 									>Leads</a
 								>
 								<a
+									href="./paymentLeads.html"
+									class="dropdown-item"
+									>Payments Leads</a
+								>
+								<a
 									href="./careerLeads.html"
 									class="dropdown-item"
-									>Career Leads</a
+									>Career Applicants</a
 								>
 								<a
 									href="./add-gallery.html"
@@ -367,11 +372,6 @@
 									href="uploadClient.html"
 									class="dropdown-item"
 									>Manage Clients</a
-								>
-								<a
-									href="./paymentLeads.html"
-									class="dropdown-item"
-									>Manage Payments</a
 								>
 								<a
 									href="./uploadFounder.html"
