--- a/uploadCareers.html
+++ b/uploadCareers.html
@@ -64,7 +64,6 @@
 			/* Center the form in the middle of the page */
 			#careersForm {
 				width: 100%;
-				max-width: 500px;
 				/* Adjust the maximum width as needed */
 				margin: 0 auto;
 				padding: 20px;
@@ -128,6 +127,120 @@
 				.buttons .btn {
 					margin-right: 0;
 					margin-bottom: 0.5rem;
+				}
+			}
+
+			/* Style the toggle input */
+			.toggle-input {
+				width: 20px;
+				height: 20px;
+				appearance: none;
+				border: 1px solid #ccc;
+				border-radius: 50%;
+				cursor: pointer;
+			}
+
+			.toggle-input:checked {
+				background-color: #5cb85c;
+				border: 1px solid #4cae4c;
+			}
+
+			/* Mobile responsiveness */
+			@media (max-width: 768px) {
+				#careersTable {
+					width: 100%;
+					padding-right: 20px;
+				}
+
+				#careersTable th,
+				#careersTable td {
+					display: block;
+					padding: 10px;
+					text-align: left;
+				}
+
+				#careersTable th {
+					background-color: #f5f5f5;
+				}
+
+				/* Style the toggle input for mobile */
+				.toggle-input {
+					width: 20px;
+					height: 20px;
+					border: 1px solid #ccc;
+					border-radius: 50%;
+					cursor: pointer;
+				}
+
+				.toggle-input:checked {
+					background-color: #5cb85c;
+					border: 1px solid #4cae4c;
+				}
+			}
+
+			/* CSS for the careers table */
+			#careersTable {
+				width: 100%;
+				border-collapse: collapse;
+			}
+
+			#careersTable th,
+			#careersTable td {
+				border: 1px solid #ddd;
+				padding: 10px;
+				text-align: center;
+			}
+
+			#careersTable th {
+				background-color: #f5f5f5;
+			}
+
+			/* Style the toggle input */
+			.toggle-input {
+				width: 20px;
+				height: 20px;
+				appearance: none;
+				border: 1px solid #ccc;
+				border-radius: 50%;
+				cursor: pointer;
+			}
+
+			.toggle-input:checked {
+				background-color: #5cb85c;
+				border: 1px solid #4cae4c;
+			}
+
+			/* Mobile responsiveness */
+			@media (max-width: 768px) {
+				#careersTable {
+					width: 100%;
+					padding: 10px;
+					/* Equal padding on both sides */
+				}
+
+				#careersTable th,
+				#careersTable td {
+					display: block;
+					padding: 10px;
+					text-align: left;
+				}
+
+				#careersTable th {
+					background-color: #f5f5f5;
+				}
+
+				/* Style the toggle input for mobile */
+				.toggle-input {
+					width: 20px;
+					height: 20px;
+					border: 1px solid #ccc;
+					border-radius: 50%;
+					cursor: pointer;
+				}
+
+				.toggle-input:checked {
+					background-color: #5cb85c;
+					border: 1px solid #4cae4c;
 				}
 			}
 		</style>
@@ -232,6 +345,13 @@
 							>Payments</a
 						>
 						<a
+							href="./products.html"
+							class="nav-item nav-link"
+							id="products"
+							style="display: none"
+							>Our Products</a
+						>
+						<a
 							href="./contact.html"
 							class="nav-item nav-link"
 							>Contact Us</a
@@ -268,13 +388,6 @@
 									id="careers"
 									style="display: none"
 									>Careers</a
-								>
-								<a
-									href="./products.html"
-									class="dropdown-item"
-									id="products"
-									style="display: none"
-									>Our Products</a
 								>
 								<!-- <a href="testimonial.html" class="dropdown-item">Testimonial</a> -->
 							</div>
@@ -612,16 +725,22 @@
 								</button>
 							</div>
 							<br />
-							<div class="form-group mt-3">
-								<a
-									class="btn btn-primary"
-									href="careers.html"
-									>Go to Careers</a
-								>
-							</div>
-							<br />
 						</div>
 					</form>
+					<!-- Start post Area -->
+					<div class="container mt-5">
+						<h2>Careers</h2>
+						<table id="careersTable">
+							<thead>
+								<tr>
+									<th>Toggle</th>
+									<th>Job Designation</th>
+								</tr>
+							</thead>
+							<tbody></tbody>
+						</table>
+					</div>
+					<!-- End post Area -->
 				</div>
 			</div>
 		</div>
