--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
 		<link
 			href="css/style.css"
 			rel="stylesheet" />
+		<style>
+			@media (max-width: 767px) {
+				#homePageWelcome {
+					font-size: 2rem;
+					margin-bottom: 10px;
+				}
+				#webAppName1 {
+					font-size: 2rem;
+				}
+			}
+		</style>
 	</head>
 
 	<body>
@@ -335,15 +346,15 @@
 						<div
 							class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 							<div
-								class="p-3"
+								class="p-3 text-center text-md-start"
 								style="max-width: 900px">
 								<h3
-									class="display-1 text-white mb-md-4 animated zoomIn"
+									class="display-4 text-white mb-md-4 animated zoomIn"
 									id="webAppName1"></h3>
 								<h4
-									class="display-1 text-white mb-md-4 animated zoomIn"
+									class="display-5 text-white mb-md-4 animated zoomIn"
 									id="homePageWelcome"
-									style="font-size: 60px"></h4>
+									style="font-size: 36px"></h4>
 								<a
 									href="contact.html"
 									class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
@@ -357,6 +368,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="carousel-item">
 						<img
 							class="w-100"
