--- a/content-edit.html
+++ b/content-edit.html
@@ -395,6 +395,63 @@
 					</div>
 				</form>
 				<!-- About Us Ends -->
+				<!-- Why Choose Us Starts -->
+<label for="toggleWhyChooseUs">Why Choose Us Section</label>
+<div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="toggleWhyChooseUs" checked>
+</div>
+<form id="whychooseus-content-form">
+    <div class="form-group mt-lg-3">
+        <label for="whyUsCaption">Why Choose Us Caption: </label>
+        <input type="text" id="whyUsCaption" class="form-control border border-primary">
+        <span id="whyUsCaption-error" class="error-message" style="display: none;">Enter Why Choose Us Caption</span>
+    </div>
+
+    <div class="form-group mt-lg-3">
+        <label for="whyUsTitle1">Title 1: </label>
+        <input type="text" id="whyUsTitle1" class="form-control border border-primary">
+        <span id="whyUsTitle1-error" class="error-message" style="display: none;">Enter Title 1</span>
+        <label for="whyUsDescription1">Description 1: </label>
+        <textarea id="whyUsDescription1" class="form-control border border-primary"></textarea>
+        <span id="whyUsDescription1-error" class="error-message" style="display: none;">Enter Description 1</span>
+    </div>
+
+    <div class="form-group mt-lg-3">
+		<label for="whyUsTitle2">Title 2: </label>
+        <input type="text" id="whyUsTitle2" class="form-control border border-primary">
+        <span id="whyUsTitle2-error" class="error-message" style="display: none;">Enter Title 2</span>
+        <label for="whyUsDescription2">Description 2: </label>
+        <textarea id="whyUsDescription2" class="form-control border border-primary"></textarea>
+        <span id="whyUsDescription2-error" class="error-message" style="display: none;">Enter Description 2</span>
+    </div>
+	<div class="form-group mt-lg-3">
+		<label for="whyUsTitle3">Title 3: </label>
+        <input type="text" id="whyUsTitle3" class="form-control border border-primary">
+        <span id="whyUsTitle3-error" class="error-message" style="display: none;">Enter Title 3</span>
+        <label for="whyUsDescription3">Description 3: </label>
+        <textarea id="whyUsDescription3" class="form-control border border-primary"></textarea>
+        <span id="whyUsDescription3-error" class="error-message" style="display: none;">Enter Description 3</span>
+    </div>
+	<div class="form-group mt-lg-3">
+		<label for="whyUsTitle4">Title 4: </label>
+        <input type="text" id="whyUsTitle4" class="form-control border border-primary">
+        <span id="whyUsTitle4-error" class="error-message" style="display: none;">Enter Title 4</span>
+        <label for="whyUsDescription4">Description 4: </label>
+        <textarea id="whyUsDescription4" class="form-control border border-primary"></textarea>
+        <span id="whyUsDescription4-error" class="error-message" style="display: none;">Enter Description 4</span>
+    </div>
+	<div class="form-group mt-lg-3">
+        <!-- Input for Why Choose Us Image -->
+        <label for="whyUsImage">Why Choose Us Image: </label>
+        <input type="file" id="whyUsImage" class="form-control">
+        <span id="whyUsImage-error" class="error-message" style="display: none;">Select Why Choose Us Image</span>
+    </div>
+    <div class="form-group mt-3">
+        <input type="submit" id="whychooseusSubmit" class="btn btn-primary mb-3">
+    </div>
+</form>
+<!-- Why Choose Us Ends -->
+
 				<!-- Our Services Starts -->
 				<label for="toggleService">Service Section</label>
 				<div class="form-check form-switch">
