--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
 						<div
 							class="carousel-caption d-flex flex-column align-items-center justify-content-center">
 							<div
-								class="p-3 text-center text-md-start"
+								class="p-3"
 								style="max-width: 900px">
 								<h3
-									class="display-4 text-white mb-md-4 animated zoomIn"
+									class="display-1 text-white mb-md-4 animated zoomIn"
 									id="webAppName1"></h3>
 								<h4
 									class="display-5 text-white mb-md-4 animated zoomIn"
@@ -645,16 +645,17 @@
 		<!-- Features Start -->
 		<div
 			class="container-fluid py-5 wow fadeInUp"
-			data-wow-delay="0.1s">
+			data-wow-delay="0.1s"
+			id="whyUsSection"
+			style="display: none">
 			<div class="container py-5">
 				<div
 					class="section-title text-center position-relative pb-3 mb-5 mx-auto"
 					style="max-width: 600px">
 					<h5 class="fw-bold text-primary text-uppercase">Why Choose Us</h5>
-					<h1 class="mb-0">
-						Elevate Your Expectations, Choose Us for Unparalleled Gifting
-						Excellence
-					</h1>
+					<h1
+						class="mb-0"
+						id="whyUsCaption"></h1>
 				</div>
 				<div class="row g-5">
 					<div class="col-lg-4">
@@ -663,20 +664,16 @@
 								class="col-12 wow zoomIn"
 								data-wow-delay="0.2s">
 								<div
-									class="bg-primary rounded d-flex align-items-center justify-content-center mb-3"
+									class="bg-success rounded d-flex align-items-center justify-content-center mb-3"
 									style="width: 60px; height: 60px">
 									<i
 										class="fa fa-recycle"
 										style="color: white"></i>
 								</div>
-								<h4>Sustainable Gifting Solutions</h4>
-								<p class="mb-0 text-justify">
-									Elevate your gifting experience with our commitment to
-									eco-friendly and recycled products across all categories.
-									Transform your employees and customers into passionate brand
-									advocates while making a powerful impact on boosting employee
-									engagement and solidifying your brand presence.
-								</p>
+								<h4 id="whyUsTitle1"></h4>
+								<p
+									class="mb-0 text-justify"
+									id="whyUsDescription1"></p>
 							</div>
 							<div
 								class="col-12 wow zoomIn"
@@ -686,14 +683,10 @@
 									style="width: 60px; height: 60px">
 									<i class="fa fa-award text-white"></i>
 								</div>
-								<h4>Our Consulting Expertise</h4>
-								<p class="mb-0 text-justify">
-									Our approach involves providing thorough consulting services,
-									offering buyers a transparent view into their procurement
-									endeavors. We meticulously authenticate commodity quality,
-									assess its value proposition, and deliver a comprehensive
-									service to management.
-								</p>
+								<h4 id="whyUsTitle2"></h4>
+								<p
+									class="mb-0 text-justify"
+									id="whyUsDescription2"></p>
 							</div>
 						</div>
 					</div>
@@ -705,7 +698,7 @@
 							<img
 								class="position-absolute w-100 h-100 rounded wow zoomIn"
 								data-wow-delay="0.1s"
-								src="img/Why US Image.jpeg"
+								id="whyUsimageUrl"
 								style="object-fit: cover" />
 						</div>
 					</div>
@@ -721,15 +714,11 @@
 									<i class="fa fa-leaf text-white"></i>
 									<!-- Updated Icon -->
 								</div>
-								<h4>Sustainable Practices</h4>
+								<h4 id="whyUsTitle3"></h4>
 								<!-- Updated Heading -->
-								<p class="mb-0 text-justify">
-									We specialize in making the entire gifting process
-									nature-friendly, catering to both corporate needs and our
-									commitment to Mother Earth. By choosing us, you not only
-									realize your vision of memorable gifting but also contribute
-									to a sustainable and eco-conscious approach to business.
-								</p>
+								<p
+									class="mb-0 text-justify"
+									id="whyUsDescription3"></p>
 							</div>
 							<!-- Updated Point 2 -->
 							<div
@@ -740,14 +729,10 @@
 									style="width: 60px; height: 60px">
 									<i class="fa fa-trophy text-white"></i>
 								</div>
-								<h4>Rich 17-Year Legacy</h4>
-								<p class="mb-0 text-justify">
-									With a legacy spanning 17 years, we bring a wealth of
-									experience and expertise to the table. Our long-standing
-									commitment to excellence and innovation sets us apart,
-									ensuring that your gifting experience is backed by a proven
-									track record of success.
-								</p>
+								<h4 id="whyUsTitle4"></h4>
+								<p
+									class="mb-0 text-justify"
+									id="whyUsDescription4"></p>
 							</div>
 						</div>
 					</div>
