--- a/products.html
+++ b/products.html
@@ -244,7 +244,7 @@
 						<div class="nav-item dropdown">
 							<a
 								href="#"
-								class="nav-link dropdown-toggle active"
+								class="nav-link dropdown-toggle"
 								id="more"
 								data-bs-toggle="dropdown"
 								style="display: none"
