--- a/contact.html
+++ b/contact.html
@@ -530,6 +530,23 @@
 										class="text-danger"></span>
 								</div>
 								<div class="col-12">
+									<label
+										for="referenceImages"
+										class="form-label"
+										>Reference Images (up to 4 images)</label
+									>
+									<input
+										type="file"
+										id="referenceImages"
+										name="referenceImages[]"
+										class="form-control border-0 bg-light"
+										accept="image/*"
+										multiple />
+									<span
+										id="referenceImagesError"
+										class="text-danger"></span>
+								</div>
+								<div class="col-12">
 									<textarea
 										id="comments"
 										class="form-control border-0 bg-light px-4 py-3"
