--- a/index.html
+++ b/index.html
@@ -851,15 +851,17 @@
 										<label
 											for="referenceImageInput"
 											class="form-label text-white"
-											>Select Reference Image (If any)</label
+											>Reference Images (up to 4 images)</label
 										>
 										<div class="input-group mb-3">
 											<input
 												type="file"
 												class="form-control"
 												id="referenceImageInput"
+												name="referenceImages[]"
 												accept="image/*"
-												placeholder="Select Reference Image (If any)" />
+												placeholder="Select Reference Image (If any)"
+												multiple />
 										</div>
 									</div>
 									<div class="col-12">
